--- a/client/src/components/common/Loader/loader.css
+++ b/client/src/components/common/Loader/loader.css
@@ -1,3 +1,9 @@
+.loader-block {
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   padding-top: 15%;
+}
 .loader {
    display: flex;
    justify-content: center;
